# ansible-k8s

./: .gitignore  README.md  requirements.txt  setup.cfg
ansible/: site.yml
ansible/group_vars/: all.yml
ansible/inventory/: all-in-one  multinode
ansible/roles/etcd/defaults/: main.yml
ansible/roles/etcd/tasks/: _kube_check.yml  _kube_remove.yml  check_cluster.yml  check_process.yml  config.yml  start.yml
ansible/roles/etcd/templates/: etcd.conf.j2  etcd.service.j2
ansible/roles/flannel/defaults/: main.yml
ansible/roles/flannel/tasks/: _kube_check.yml  _kube_remove.yml  check_network_config.yml  check_process.yml  config.yml  start.yml
ansible/roles/flannel/templates/: flanneld.j2  flanneld.service.j2
ansible/roles/kubectl/defaults/: main.yml
ansible/roles/kubectl/tasks/: _kube_check.yml  _kube_remove.yml  check_systemd.yml  config.yml  install_systemd.yml  set_admin.yml  start.yml
ansible/roles/kubelet/defaults/: main.yml
ansible/roles/kubelet/tasks/: _kube_check.yml  _kube_remove.yml  check_docker.yml  check_kubeconfig.yml  check_process.yml  check_systemd.yml  config.yml  install_systemd.yml  set_docker.yml  set_kubelet.yml  set_kubeproxy.yml  start.yml  start_kube_proxy.yml  start_kubelet.yml
ansible/roles/kubelet/templates/: kube-proxy-config.yaml.j2  kube-proxy.conf.j2  kube-proxy.service.j2  kubelet-config.yaml.j2  kubelet.conf.j2  kubelet.service.j2
ansible/roles/kubeserver/defaults/: main.yml
ansible/roles/kubeserver/tasks/: _kube_check.yml  _kube_deploy.yml  _kube_remove.yml  (+10 more)
etc/config-test/: globals.yml
tools/: ansible-k8s
(+24 files in other folders)
