[metadata]
name = ansible-k8s
summary = Ansible deployment of k8s cluster
description-file =
    README.rst
author = wangwei
author-email = wangw88916@126.com
home-page = https://github.com/wangwDavid
license = Apache License, Version 2.0
classifier =
    Environment :: k8s
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    ansible-k8s
data_files =
    share/ansible-k8s/ansible = ansible/*
    share/ansible-k8s/etc_examples = etc/*
    share/ansible-k8s = setup.cfg

scripts =
    tools/ansible-k8s

[global]
setup-hooks =
    pbr.hooks.setup_hook
